--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,9 @@ const { pageTitle }: { pageTitle?: string } = Astro.props;
     <title>arithefirst{pageTitle ? ` | ${pageTitle}` : ''}</title>
   </head>
   <body>
-    <slot />
+    <div class="flex">
+      <slot />
+    </div>
   </body>
 </html>
 
