--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,13 @@
 ---
-import './src/styles/global.css';
+import '$lib/styles/global.css';
+import Miku from '$lib/images/miku.png';
+import { Image } from 'astro:assets';
+import Link from '$lib/components/link.astro';
+import Discord from '$lib/icons/discord.astro';
+import GitHub from '$lib/icons/github.astro';
+import Mail from '$lib/icons/mail.astro';
+import Terminal from '$lib/icons/terminal.astro';
+
 const { pageTitle }: { pageTitle?: string } = Astro.props;
 ---
 
@@ -11,9 +19,29 @@ const { pageTitle }: { pageTitle?: string } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>arithefirst{pageTitle ? ` | ${pageTitle}` : ''}</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="flex">
+    <div class="flex h-screen">
+      <div class="bg-mantle flex flex-col items-center md:w-1/2 lg:w-[500px]">
+        <Image src={Miku} alt="Hatsune Miku" class="mx-auto mt-42 w-2/3 rounded-full shadow-lg" />
+        <h1 class="mt-7 w-full text-center text-5xl">Hi, I'm <span class="font-bold">April Hall</span></h1>
+        <hr class="border-subtext-0 mx-auto mt-4 w-3/5 border-t" />
+        <h2 class="font-roboto mx-auto mt-4 text-center font-extralight">
+          Your friendly neighborhood fullstack developer
+        </h2>
+        <div class="bg-base mt-28 flex h-10 w-48 items-center justify-center gap-2 rounded-full">
+          <Link href="https://discord.com/users/613358761901424652"><Discord /></Link>
+          <Link href="https://github.com/arithefirst"><GitHub /></Link>
+          <Link href="mailto:ari@arithefirst.com"><Mail /></Link>
+          <Link><Terminal /></Link>
+        </div>
+      </div>
       <slot />
     </div>
   </body>
