--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -12,10 +12,10 @@ const projectArray = Array(5).fill({
 ---
 
 <Layout>
-  <div class="w-full p-8">
+  <div class="@container w-full p-8">
     <h1 class="mb-4 text-4xl font-bold">Projects</h1>
-    <div class="grid w-full grid-cols-2 gap-2">
-      <Projects projects={projectArray} />
+    <div class="grid w-full grid-cols-1 gap-2 @5xl:grid-cols-2">
+      <Projects projects={projectArray} client:load />
     </div>
   </div>
 </Layout>
