--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { pageTitle }: { pageTitle?: string } = Astro.props;
   </head>
   <body class="m-0 h-full w-full">
     <div class="flex h-screen">
-      <div class="bg-mantle flex w-1/2 w-2/7 items-center">
+      <div class="bg-mantle flex w-1/2 w-2/7 min-w-[380px] items-center">
         <div class="my-auto h-fit w-full scale-[0.9] 2xl:scale-100">
           <Image src={Miku} alt="Hatsune Miku" class="mx-auto w-2/3 rounded-full shadow-lg" />
           <h1 class="mt-7 w-full text-center text-5xl">Hi, I'm <span class="font-bold">April Hall</span></h1>
