--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '$lib/layouts/Layout.astro';
 import Projects from '$lib/layouts/Projects.svelte';
+import Command from '$lib/components/Project.svelte';
 
 const projectArray = [
   {
