--- a/src/styles/shadcn.css
+++ b/src/styles/shadcn.css
@@ -4,72 +4,30 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-    --destructive: 0 72.2% 50.6%;
-    --destructive-foreground: 210 40% 98%;
-    --ring: 222.2 84% 4.9%;
+    --background: 240 21.052631735801697% 14.901961386203766%; /* base */
+    --foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
+    --muted: 237 16.239316761493683% 22.94117659330368%; /* surface0 */
+    --muted-foreground: 227 35.29411852359772% 80.0000011920929%; /* subtext1 */
+    --popover: 240 21.052631735801697% 14.901961386203766%; /* base */
+    --popover-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
+    --card: 240 21.052631735801697% 14.901961386203766%; /* base */
+    --card-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
+    --border: 234 13.20754736661911% 31.176471710205078%; /* surface1 */
+    --input: 234 13.20754736661911% 31.176471710205078%; /* surface1 */
+    --primary: 267 83.50515365600586% 80.98039031028748%; /* accent - Mauve */
+    --primary-foreground: 240 21.052631735801697% 14.901961386203766%; /* base */
+    --secondary: 237 16.239316761493683% 22.94117659330368%; /* surface0 */
+    --secondary-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
+    --accent: 237 16.239316761493683% 22.94117659330368%; /* surface0 */
+    --accent-foreground: 226 63.93442749977112% 88.03921341896057%; /* text */
+    --destructive: 343 81.25% 74.90196228027344%; /* red */
+    --destructive-foreground: 240 21.311475336551666% 11.96078434586525%; /* mantle */
+    --ring: 226 63.93442749977112% 88.03921341896057%; /* text */
     --radius: 0.5rem;
-	--sidebar-background: 0 0% 98%;
-    --sidebar-foreground: 240 5.3% 26.1%;
-    --sidebar-primary: 240 5.9% 10%;
-    --sidebar-primary-foreground: 0 0% 98%;
-    --sidebar-accent: 240 4.8% 95.9%;
-    --sidebar-accent-foreground: 240 5.9% 10%;
-    --sidebar-border: 220 13% 91%;
-    --sidebar-ring: 217.2 91.2% 59.8%;
-  }
-
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-    --ring: 212.7 26.8% 83.9%;
-	--sidebar-background: 240 5.9% 10%;
-    --sidebar-foreground: 240 4.8% 95.9%;
-    --sidebar-primary: 224.3 76.3% 48%;
-    --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 240 3.7% 15.9%;
-    --sidebar-accent-foreground: 240 4.8% 95.9%;
-    --sidebar-border: 240 3.7% 15.9%;
-    --sidebar-ring: 217.2 91.2% 59.8%;
-  }
-}
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
+    --chart-1: 343 81.25% 74.90196228027344%; /* red */
+    --chart-2: 170 57.35294222831726% 73.33333492279053%; /* teal */
+    --chart-3: 217 91.86992049217224% 75.88235139846802%; /* blue */
+    --chart-4: 41 86.04651093482971% 83.13725590705872%; /* yellow */
+    --chart-5: 115 54.09836173057556% 76.07843279838562%; /* green */
   }
 }
