--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,15 @@
 ---
-import '$lib/styles/global.css';
-import Miku from '$lib/images/miku.png';
-import { Image } from 'astro:assets';
 import Link from '$lib/components/link.astro';
 import Discord from '$lib/icons/discord.astro';
 import GitHub from '$lib/icons/github.astro';
 import Mail from '$lib/icons/mail.astro';
 import Terminal from '$lib/icons/terminal.astro';
+import Miku from '$lib/images/miku.png';
+
+import Command from '$lib/components/Command.svelte';
 import SidebarText from '$lib/layouts/SidebarText.svelte';
+import '$lib/styles/global.css';
+import { Image } from 'astro:assets';
 
 const { pageTitle }: { pageTitle?: string } = Astro.props;
 ---
@@ -28,6 +30,7 @@ const { pageTitle }: { pageTitle?: string } = Astro.props;
     />
   </head>
   <body class="m-0 h-full w-full">
+    <Command client:load />
     <div class="flex h-screen">
       <div class="bg-mantle flex w-1/2 w-2/7 min-w-[380px] items-center">
         <div class="my-auto h-fit w-full scale-[0.9] 2xl:scale-100">
