--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,5 @@
 ---
 import Layout from '$lib/layouts/Layout.astro';
-import Command from '$lib/components/Command.svelte';
 ---
 
-<Layout>
-  <Command client:load />
-</Layout>
+<Layout />
