feat: Page navigation in command pallete

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
 import Link from '$lib/components/link.astro';
-import Discord from '$lib/icons/discord.astro';
-import GitHub from '$lib/icons/github.astro';
-import Mail from '$lib/icons/mail.astro';
-import Terminal from '$lib/icons/terminal.astro';
+import Discord from '$lib/icons/discord.svelte';
+import GitHub from '$lib/icons/github.svelte';
+import Mail from '$lib/icons/mail.svelte';
+import Terminal from '$lib/icons/terminal.svelte';
 import Miku from '$lib/images/miku.png';
 
 import Command from '$lib/components/Command.svelte';
