--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,6 +56,13 @@
   }
 }
 
+.abs-center {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 html {
   @apply text-text bg-base;
 }
