--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,16 +1,8 @@
 ---
-import Link from '$lib/components/link.astro';
-import Discord from '$lib/icons/discord.svelte';
-import GitHub from '$lib/icons/github.svelte';
-import Mail from '$lib/icons/mail.svelte';
-import Terminal from '$lib/icons/terminal.svelte';
-import Miku from '$lib/images/miku.png';
-
 import Command from '$lib/components/Command.svelte';
-import PromptTriggerButton from '$lib/components/PromptTriggerButton.svelte';
-import SidebarText from '$lib/layouts/SidebarText.svelte';
+import Desktop from '$lib/components/sidebar/Desktop.astro';
+import Mobile from '$lib/components/sidebar/Mobile.astro';
 import '$lib/styles/global.css';
-import { Image } from 'astro:assets';
 
 const { pageTitle }: { pageTitle?: string } = Astro.props;
 ---
@@ -32,19 +24,9 @@ const { pageTitle }: { pageTitle?: string } = Astro.props;
   </head>
   <body class="m-0 h-full w-full">
     <Command client:load />
-    <div class="flex h-screen">
-      <div class="bg-mantle flex w-1/2 w-2/7 min-w-[380px] items-center">
-        <div class="my-auto h-fit w-full scale-[0.9] 2xl:scale-100">
-          <Image src={Miku} alt="Hatsune Miku" class="mx-auto w-2/3 rounded-full shadow-lg" />
-          <SidebarText client:load />
-          <div class="bg-base mx-auto mt-28 flex h-10 w-48 items-center justify-center gap-2 rounded-full">
-            <Link href="https://discord.com/users/613358761901424652"><Discord /></Link>
-            <Link href="https://github.com/arithefirst"><GitHub /></Link>
-            <Link href="mailto:ari@arithefirst.com"><Mail /></Link>
-            <PromptTriggerButton client:load class="w-fit"><Terminal /></PromptTriggerButton>
-          </div>
-        </div>
-      </div>
+    <div class="flex h-screen flex-col md:flex-row">
+      <Desktop />
+      <Mobile />
       <div class="bg-topography relative size-full overflow-x-scroll">
         <slot />
       </div>
