--- a/src/components/sidebar/Mobile.astro
+++ b/src/components/sidebar/Mobile.astro
@@ -6,7 +6,7 @@ import { Image } from 'astro:assets';
 
 <div class="bg-mantle flex h-1/5 flex-col items-center justify-center p-4 shadow-2xl md:hidden">
   <div class="flex items-center justify-center">
-    <Image src={Miku} alt="Hatsune Miku" class="w-1/4 rounded-full shadow-lg" loading="eager" />
+    <Image src={Miku} alt="Hatsune Miku" class="h-16 w-16 rounded-full shadow-lg" loading="eager" />
     <hr class="border-subtext-0 mx-2 h-3/4 border-l-1" />
     <div class="block w-fit">
       <h1 class="w-fit text-2xl">Hi, I'm <span class="font-bold">April Hall</span></h1>
