feat: Custom scrollbar colors

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const { pageTitle }: { pageTitle?: string } = Astro.props;
     <div class="flex h-screen flex-col md:flex-row">
       <Desktop />
       <Mobile />
-      <div class="bg-topography relative size-full overflow-x-scroll">
+      <div class="bg-topography relative size-full overflow-y-scroll">
         <slot />
       </div>
     </div>
