--- a/src/components/sidebar/Desktop.astro
+++ b/src/components/sidebar/Desktop.astro
@@ -5,10 +5,10 @@ import SidebarText from '$lib/layouts/SidebarText.svelte';
 import { Image } from 'astro:assets';
 ---
 
-<div class="bg-mantle hidden w-1/2 w-2/7 min-w-[380px] items-center md:flex">
+<nav class="bg-mantle hidden w-1/2 w-2/7 min-w-[380px] items-center md:flex">
   <div class="my-auto h-fit w-full scale-[0.9] 2xl:scale-100">
     <Image src={Miku} alt="Hatsune Miku" class="mx-auto w-2/3 rounded-full shadow-lg" />
     <SidebarText client:load />
     <Buttons class="mt-28" />
   </div>
-</div>
+</nav>
