fix: PGP Not centered in desktop layout

--- a/src/pages/pgp-pubkey.astro
+++ b/src/pages/pgp-pubkey.astro
@@ -7,7 +7,9 @@ import CopyButton from '$lib/components/copyButton.svelte';
 ---
 
 <Layout>
-  <div class="md:abs-center font-code mx-auto h-fit w-11/12 overflow-y-scroll px-2 py-4 md:w-fit md:p-0">
+  <div
+    class="font-code mx-auto h-fit w-11/12 overflow-y-scroll px-2 py-4 md:absolute md:top-1/2 md:left-1/2 md:w-fit md:-translate-x-1/2 md:-translate-y-1/2 md:p-0"
+  >
     <h1 class="mb-1 w-full pl-1">pgp_public_key.asc</h1>
     <pre
       class="bg-mantle border-border h-fit w-full rounded-md border p-4 text-wrap break-words md:size-fit"><Pubkey.Content /></pre>
