fix: Store cheesecake locally for preformance

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -6,7 +6,7 @@ const projectArray = [
   {
     title: 'Shibedrill.site',
     description: 'A Custom-built blog site for ShibeDrill',
-    src: 'https://www.shibedrill.site/cheesecake.png',
+    src: '/images/cheesecake.png',
     alt: 'Cheesecake, the harbinger of the end times',
     badges: ['AstroJS', 'DaisyUI', 'TailwindCSS', 'Vercel'],
   },
