--- a/src/layouts/Error.astro
+++ b/src/layouts/Error.astro
@@ -29,8 +29,8 @@ const { code, message } = Astro.props;
   </head>
   <body class="bg-topography size-full">
     <div class="flex size-full flex-col items-center justify-center">
-      <h1 class="text-mauve w-fit text-[50vh] leading-none font-black">{code}</h1>
-      <h3 class="text-2xl">{message}</h3>
+      <h1 class="text-mauve w-fit text-[35vw] leading-none font-black md:text-[50vh]">{code}</h1>
+      <h3 class="w-3/4 text-center text-lg md:w-full">{message}</h3>
       <div class="mt-2 flex gap-2">
         <Button href="/">Go Home</Button>
         <Button href="mailto:ari@arithefirst.com">Email the owner</Button>
