--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -29,7 +29,7 @@ const projectArray: ExperienceCard[] = [
 ];
 ---
 
-<Layout>
+<Layout description="April Hall's Work Experience" pageTitle="Experience">
   <div class="w-full p-8">
     <h1 class="mb-4 text-4xl font-bold">Experience</h1>
     <Experiences cards={projectArray} client:load />
