--- a/src/pages/pgp-pubkey.astro
+++ b/src/pages/pgp-pubkey.astro
@@ -7,7 +7,7 @@ import CopyButton from '$lib/components/copyButton.svelte';
 import { Toaster } from '$lib/components/ui/sonner';
 ---
 
-<Layout>
+<Layout description="April Hall's PGP Publickey" pageTitle="PGP Pubkey">
   <Toaster client:load offset="20px" visibleToasts={3} />
   <div
     class="font-code mx-auto h-fit w-11/12 overflow-y-scroll px-2 py-4 md:absolute md:top-1/2 md:left-1/2 md:w-fit md:-translate-x-1/2 md:-translate-y-1/2 md:p-0"
