--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -27,7 +27,7 @@ const projectArray = [
 ];
 ---
 
-<Layout>
+<Layout description="April Hall's Personal Projects" pageTitle="Projects">
   <div class="@container w-full p-8">
     <h1 class="mb-4 text-4xl font-bold">Projects</h1>
     <div class="grid w-full grid-cols-1 gap-2 @5xl:grid-cols-2">
