fix: Scrollbar on unscrollable div

--- a/src/pages/pgp-pubkey.astro
+++ b/src/pages/pgp-pubkey.astro
@@ -10,7 +10,7 @@ import { Toaster } from '$lib/components/ui/sonner';
 <Layout description="April Hall's PGP Publickey" pageTitle="PGP Pubkey">
   <Toaster client:load offset="20px" visibleToasts={3} />
   <div
-    class="font-code mx-auto h-fit w-11/12 overflow-y-scroll px-2 py-4 md:absolute md:top-1/2 md:left-1/2 md:w-fit md:-translate-x-1/2 md:-translate-y-1/2 md:p-0"
+    class="font-code mx-auto h-fit w-11/12 overflow-y-scroll px-2 py-4 md:absolute md:top-1/2 md:left-1/2 md:w-fit md:-translate-x-1/2 md:-translate-y-1/2 md:overflow-hidden md:p-0"
   >
     <h1 class="mb-1 w-full pl-1">pgp_public_key.asc</h1>
     <pre
