--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,4 +2,8 @@
 import Layout from '$lib/layouts/Layout.astro';
 ---
 
-<Layout />
+<Layout>
+  <div class="w-full p-8">
+    <h1 class="mb-4 text-4xl font-bold">About Me</h1>
+  </div>
+</Layout>
