feat: Add T3 Chat Cappuccin to projects

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -4,11 +4,12 @@ import Projects from '$lib/layouts/Projects.svelte';
 
 const projectArray = [
   {
-    title: 'Shibedrill.site',
-    description: 'A Custom-built blog site for ShibeDrill',
-    src: '/images/cheesecake.png',
-    alt: 'Cheesecake, the harbinger of the end times',
-    badges: ['AstroJS', 'DaisyUI', 'TailwindCSS', 'Vercel'],
+    title: 'Catppuccin for T3 Chat',
+    description: 'A soothing pastel theme for T3 Chat',
+    src: '/images/catppuccin.png',
+    alt: 'Catppuccin logo',
+    badges: ['CSS', 'LESS', 'YAML'],
+    padding: 3.5,
   },
   {
     title: 'Lockbox',
@@ -16,6 +17,13 @@ const projectArray = [
     src: '/images/lockbox.svg',
     alt: 'Lockbox Logo',
     badges: ['DaisyUI', 'Docker', 'SvelteKit', 'TailwindCSS', 'TypeScript'],
+  },
+  {
+    title: 'Shibedrill.site',
+    description: 'A Custom-built blog site for ShibeDrill',
+    src: '/images/cheesecake.png',
+    alt: 'Cheesecake, the harbinger of the end times',
+    badges: ['AstroJS', 'DaisyUI', 'TailwindCSS', 'Vercel'],
   },
   {
     title: 'SVChat',
