perf: Client router to re-use components on supported browsers

--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -1,5 +1,6 @@
 ---
 const { pageTitle, description }: { pageTitle?: string; description?: string } = Astro.props;
+import { ClientRouter } from 'astro:transitions';
 ---
 
 <head>
@@ -37,6 +38,7 @@ const { pageTitle, description }: { pageTitle?: string; description?: string } =
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet"
   />
+  <ClientRouter />
 
   <!-- Extra tags -->
   <slot />
