--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,7 @@
 @import 'tailwindcss';
 @import './topography.css';
+@plugin '@tailwindcss/typography';
+@config './tailwind.config.ts';
 
 @theme {
   /* Catppuccin Colors */
