perf: Convert images to WEBP where possible

--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -23,7 +23,7 @@ const experienceArray: ExperienceCard[] = [
       'Set up and repaired several imperative services for functionality and user satisfaction.',
       'Implemented GitHub continous integration to improve developer experience.',
     ],
-    src: '/images/h3.png',
+    src: '/images/h3.webp',
     alt: 'the hikari3.ch logo',
   },
 ];
