--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -31,7 +31,7 @@ import { ClientRouter } from 'astro:transitions';
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
   <meta name="darkreader-lock" />
-  <link rel="icon" type="image/svg+xml" href="/images/teto-rounded.png" />
+  <link rel="icon" type="image/svg+xml" href="/images/teto-rounded.webp" />
   <meta name="generator" content={Astro.generator} />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
