--- a/src/components/sidebar/Buttons.astro
+++ b/src/components/sidebar/Buttons.astro
@@ -10,8 +10,10 @@ const hoverClass = 'transition-all duration-400 hover:pb-4';
 ---
 
 <div class={'bg-base mx-auto flex h-10 w-fit p-3 items-center justify-center gap-2 rounded-full ' + className}>
-  <Link href="https://bsky.app/profile/arithefirst.com" class={hoverClass}><BlueSky /></Link>
-  <Link href="https://discord.com/users/613358761901424652" class={hoverClass}><Discord /></Link>
-  <Link href="https://github.com/arithefirst" class={hoverClass}><GitHub /></Link>
-  <Link href="mailto:ari@arithefirst.com" email client:load class={hoverClass}><Mail /></Link>
+  <Link href="https://bsky.app/profile/arithefirst.com" alt="Bluesky" class={hoverClass} client:idle><BlueSky /></Link>
+  <Link href="https://discord.com/users/613358761901424652" alt="Discord" class={hoverClass} client:idle
+    ><Discord /></Link
+  >
+  <Link href="https://github.com/arithefirst" alt="GitHub" class={hoverClass} client:idle><GitHub /></Link>
+  <Link href="mailto:ari@arithefirst.com" alt="E-Mail" email class={hoverClass} client:load><Mail /></Link>
 </div>
