--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const { pageTitle, description }: { pageTitle?: string; description?: string } =
       <strong class="bold mr-1">TIP: </strong>
       Press
       <span class="mr-0.5 ml-1 flex items-center"><KBD class="mr-0.5">CTRL</KBD>+<KBD class="mr-0.5">K</KBD></span>
-      to open Command Pallette
+      to open Command Palette
     </div>
   </body>
 </html>
