fix: Update images in head to WEBP

--- a/src/layouts/Head.astro
+++ b/src/layouts/Head.astro
@@ -29,16 +29,16 @@ import SpeedInsights from '@vercel/speed-insights/astro';
   {description ? <meta name="description" content={description} /> : ''}
   <meta itemprop="name" content={`arithefirst ${pageTitle ? `| ${pageTitle}` : ''}`} />
   {description ? <meta itemprop="description" content={description} /> : ''}
-  <meta itemprop="image" content="/images/teto.jpg" />
+  <meta itemprop="image" content="/images/teto.webp" />
   <meta property="og:url" content={`https://next.arithefirst.com${Astro.url.pathname}`} />
   <meta property="og:type" content="website" />
   <meta property="og:title" content={`arithefirst ${pageTitle ? ` | ${pageTitle}` : ''}`} />
   {description ? <meta property="og:description" content={description} /> : ''}
-  <meta property="og:image" content="/images/teto.jpg" />
+  <meta property="og:image" content="/images/teto.webp" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content={`arithefirst ${pageTitle ? ` | ${pageTitle}` : ''}`} />
   {description ? <meta name="twitter:description" content={description} /> : ''}
-  <meta name="twitter:image" content="/images/teto.jpg" />
+  <meta name="twitter:image" content="/images/teto.webp" />
 
   <!-- Other -->
   <meta charset="UTF-8" />
